trunk/Archive2/f9/466b51bb477dec/output
main.cpp: In function 'int main()':
main.cpp:19:18: error: 'hexfloat' is not a member of 'std'
     std::cout << std::hexfloat << d << " is " << std::hex << n
                  ^
